==> Jac0b-Shi/water-immersion-alarm/User/eth_driver.c <==
#include "config.h"
#include "string.h"
#include "debug.h"
#include "ch32v20x.h"
#include "ch32v20x_gpio.h"
#include "ch32v20x_rcc.h"
#include "net_config.h"
#include "eth_driver.h"

void WCHNET_LinkProcess( void )
{
    uint16_t phy_anlpar, phy_bmcr, phy_bmsr;

    phy_anlpar = ReadPHYReg(PHY_ANLPAR);
    phy_bmsr = ReadPHYReg(PHY_BMSR);

    if(phy_anlpar&PHY_ANLPAR_SELECTOR_FIELD)
    {
        if( !(phyLinkStatus&PHY_LINK_WAIT_SUC) )
        {
            if( (phyPN&0x0C) == PHY_PN_SWITCH_P )
            {
                phySucCnt = 0;
                phyLinkCnt = 0;
                phyLinkStatus = PHY_LINK_WAIT_SUC;
            }
            else
            {
                if( !(phyLinkStatus&PHY_LINK_SUC_N) )
                {
                    phyRetryCnt = 0;
                    phyLinkStatus |= PHY_LINK_SUC_N;
                    phyPN &= ~PHY_PN_SWITCH_N;
                    phy_bmcr = ReadPHYReg(PHY_BMCR);
                    phy_bmcr |= 1<<9;
                    WritePHYReg(PHY_BMCR, phy_bmcr);
                    WritePHYReg(PHY_MDIX, phyPN);
                }
                else
                {
                    phySucCnt = 0;
                    phyLinkCnt = 0;
                    phyLinkStatus = PHY_LINK_WAIT_SUC;
                }
            }
        }
        else{
            if((phySucCnt++ == 5) && ((phy_bmsr&PHY_AutoNego_Complete) == 0))
            {
                phySucCnt = 0;
                phyRetryCnt = 0;
                phyPNChangeCnt = 0;
                phyLinkStatus = PHY_LINK_INIT;
                phy_bmcr = ReadPHYReg(PHY_BMCR);
                phy_bmcr |= 1<<9;
                WritePHYReg(PHY_BMCR, phy_bmcr);
                if((phyPN&0x0C) == PHY_PN_SWITCH_P)
                {
                    phyPN |= PHY_PN_SWITCH_N;
                }
                else {
                    phyPN &= ~PHY_PN_SWITCH_N;
                }
                WritePHYReg(PHY_MDIX, phyPN);
            }
        }
    }
    else
    {
        if(phy_bmsr & PHY_AutoNego_Complete)
        {
            phySucCnt = 0;
            phyLinkCnt = 0;
            phyLinkStatus = PHY_LINK_WAIT_SUC;
        }
        else {
            if( phyLinkStatus == PHY_LINK_WAIT_SUC )
            {
                if(phyLinkCnt++ == 10)
                {
                    phyLinkCnt = 0;
                    phyRetryCnt = 0;
                    phyPNChangeCnt = 0;
                    phyLinkStatus = PHY_LINK_INIT;
                }
            }
            else if(phyLinkStatus == PHY_LINK_INIT)
            {
                if(phyPNChangeCnt++ == 10)
                {
                    phyPNChangeCnt = 0;
                    phyPN = ReadPHYReg(PHY_MDIX);
                    phyPN &= ~0x0c;
                    phyPN ^= 0x03;
                    WritePHYReg(PHY_MDIX, phyPN);
                }
                else{
                    if((phyPN&0x0C) == PHY_PN_SWITCH_P)
                    {
                        phyPN |= PHY_PN_SWITCH_N;
                    }
                    else {
                        phyPN &= ~PHY_PN_SWITCH_N;
                    }
                    WritePHYReg(PHY_MDIX, phyPN);
                }
            }
            else if(phyLinkStatus == PHY_LINK_SUC_N)
            {
                if((phyPN&0x0C) == PHY_PN_SWITCH_P)
                {
                    phyPN |= PHY_PN_SWITCH_N;
                    phy_bmcr = ReadPHYReg(PHY_BMCR);
                    phy_bmcr |= 1<<9;
                    WritePHYReg(PHY_BMCR, phy_bmcr);
                    Delay_Us(10);
                    WritePHYReg(PHY_MDIX, phyPN);
                }
                else{
                    if(phyRetryCnt++ == 15)
                    {
                        phyRetryCnt = 0;
                        phyPNChangeCnt = 0;
                        phyLinkStatus = PHY_LINK_INIT;
                    }
                }
            }
        }
    }
}

void ETH_LedLinkSet( uint8_t mode )
{
    if( mode == LED_OFF )
    {
        GPIO_SetBits(GPIOD, GPIO_Pin_3);    // 高电平熄灭
    }
    else
    {
        GPIO_ResetBits(GPIOD, GPIO_Pin_3);  // 低电平点亮
    }
}

void ETH_LedDataSet( uint8_t mode )
{
    if( mode == LED_OFF )
    {
        GPIO_SetBits(GPIOD, GPIO_Pin_4);    // 高电平熄灭
    }
    else
    {
        GPIO_ResetBits(GPIOD, GPIO_Pin_4);  // 低电平点亮
    }
}

void ETH_LedConfiguration(void)
{
    GPIO_InitTypeDef  GPIO={0};

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD, ENABLE);
    GPIO.GPIO_Pin = GPIO_Pin_3 | GPIO_Pin_4;
    GPIO.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOD, &GPIO);
    ETH_LedDataSet(LED_OFF);
    ETH_LedLinkSet(LED_OFF);
}

void ETH_SetClock(void)
{
    RCC_ETHDIVConfig(RCC_ETHCLK_Div2);  // 120M/2 = 60MHz
}

void ETH_Configuration( uint8_t *macAddr )
{
    ETH_SetClock( );
    R8_ETH_EIE = 0;
    R8_ETH_EIE |= RB_ETH_EIE_INTIE |
                  RB_ETH_EIE_RXIE|
                  RB_ETH_EIE_LINKIE|
                  RB_ETH_EIE_TXIE  |
                  RB_ETH_EIE_TXERIE|
                  RB_ETH_EIE_RXERIE;

    R8_ETH_EIE |= RB_ETH_EIE_R_EN50;

    R8_ETH_EIR = 0xff;
    R8_ETH_ESTAT |= RB_ETH_ESTAT_INT | RB_ETH_ESTAT_BUFER;

    R8_ETH_ECON1 |= (RB_ETH_ECON1_TXRST|RB_ETH_ECON1_RXRST);
    R8_ETH_ECON1 &= ~(RB_ETH_ECON1_TXRST|RB_ETH_ECON1_RXRST);

    R8_ETH_ERXFCON = 0;
    R8_ETH_MAADRL1 = macAddr[5];
    R8_ETH_MAADRL2 = macAddr[4];
    R8_ETH_MAADRL3 = macAddr[3];
    R8_ETH_MAADRL4 = macAddr[2];
    R8_ETH_MAADRL5 = macAddr[1];
    R8_ETH_MAADRL6 = macAddr[0];

    R8_ETH_MACON1 |= RB_ETH_MACON1_MARXEN;
    R8_ETH_MACON2 &= ~RB_ETH_MACON2_PADCFG;
    R8_ETH_MACON2 |= PADCFG_AUTO_3;
    R8_ETH_MACON2 |= RB_ETH_MACON2_TXCRCEN;
    R8_ETH_MACON2 &= ~RB_ETH_MACON2_HFRMEN;
    R8_ETH_MACON2 |= RB_ETH_MACON2_FULDPX;
    R16_ETH_MAMXFL = ETH_MAX_PACKET_SIZE;
    R8_ETH_ECON2 &= ~(0x07 << 1);
    R8_ETH_ECON2 |= 5 << 1;

    EXTEN->EXTEN_CTR |= EXTEN_ETH_10M_EN;
}

uint32_t ETH_TxPktChainMode(uint16_t len, uint32_t *pBuff )
{
    if((DMATxDescToSet->Status & ETH_DMATxDesc_OWN))
    {
        if((R8_ETH_ECON1 & RB_ETH_ECON1_TXRTS) == 0)
        {
            DMATxDescToSet->Status &= ~ETH_DMATxDesc_OWN;
        }
        else return ETH_ERROR;
    }
    DMATxDescToSet->Status |= ETH_DMATxDesc_OWN;
    R16_ETH_ETXLN = len;
    R16_ETH_ETXST = (uint32_t)pBuff;
    R8_ETH_ECON1 |= RB_ETH_ECON1_TXRTS;
    DMATxDescToSet = (ETH_DMADESCTypeDef*) (DMATxDescToSet->Buffer2NextDescAddr);
    return ETH_SUCCESS;
}

void ETH_PHYLink( void )
{
    uint16_t phy_bsr, phy_anlpar;

    phy_bsr = ReadPHYReg(PHY_BMSR);
    phy_anlpar = ReadPHYReg(PHY_ANLPAR);

    if(phy_bsr & PHY_Linked_Status)
    {
        if(phy_bsr & PHY_AutoNego_Complete)
        {
            ETH_LinkUpCfg(phy_bsr);
        }
        else {
            if(phy_anlpar == 0)
            {
                WritePHYReg(PHY_BMCR, PHY_Reset);
                PHY_NEGOTIATION_PARAM_INIT();
            }
            else {
                ETH_LinkDownCfg(phy_bsr);
            }
        }
    }
    else {
        ETH_LinkDownCfg(phy_bsr);
    }
}

void WCHNET_ETHIsr( void )
{
    uint8_t eth_irq_flag, estat_regval;

    eth_irq_flag = R8_ETH_EIR;
    if(eth_irq_flag&RB_ETH_EIR_RXIF)
    {
        R8_ETH_EIR = RB_ETH_EIR_RXIF;
        if( DMARxDescToGet->Status & ETH_DMARxDesc_OWN )
        {
            estat_regval = R8_ETH_ESTAT;
            if(estat_regval & \
                    (RB_ETH_ESTAT_BUFER | RB_ETH_ESTAT_RXCRCER | RB_ETH_ESTAT_RXNIBBLE | RB_ETH_ESTAT_RXMORE))
            {
                return;
            }
            if( ((ETH_DMADESCTypeDef*)(DMARxDescToGet->Buffer2NextDescAddr))->Status& ETH_DMARxDesc_OWN )
            {
                DMARxDescToGet->Status &= ~ETH_DMARxDesc_OWN;
                DMARxDescToGet->Status &= ~ETH_DMARxDesc_ES;
                DMARxDescToGet->Status |= (ETH_DMARxDesc_FS|ETH_DMARxDesc_LS);
                DMARxDescToGet->Status &= ~ETH_DMARxDesc_FL;
                DMARxDescToGet->Status |= ((R16_ETH_ERXLN+4)<<ETH_DMARxDesc_FrameLengthShift);
                DMARxDescToGet = (ETH_DMADESCTypeDef*) (DMARxDescToGet->Buffer2NextDescAddr);
                R16_ETH_ERXST = DMARxDescToGet->Buffer1Addr;
            }
        }
        if(PhyPolarityDetect)
        {
            PhyPolarityDetect = 0;
            R8_ETH_ERXFCON &= ~RB_ETH_ERXFCON_CRCEN;
        }
    }
    if(eth_irq_flag&RB_ETH_EIR_TXIF)
    {
        DMATxDescToSet->Status &= ~ETH_DMATxDesc_OWN;
        R8_ETH_EIR = RB_ETH_EIR_TXIF;
    }
    if(eth_irq_flag&RB_ETH_EIR_LINKIF)
    {
        ETH_PHYLink();
        R8_ETH_EIR = RB_ETH_EIR_LINKIF;
    }
    if(eth_irq_flag&RB_ETH_EIR_TXERIF)
    {
        DMATxDescToSet->Status &= ~ETH_DMATxDesc_OWN;
        R8_ETH_EIR = RB_ETH_EIR_TXERIF;
    }
    if(eth_irq_flag&RB_ETH_EIR_RXERIF)
    {
        if(PhyPolarityDetect) CRCErrPktCnt++;
        R8_ETH_EIR = RB_ETH_EIR_RXERIF;
    }
}
